[package]
name = "cinder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
ash = { version = "0.38", features = [ "linked" ] }
ash-window = "0.13.0"
raw-window-handle = "0.6.2"
tokio = { version = "1.44.2", features = [ "macros", "rt-multi-thread", "sync" ] } 
winit = { version = "0.30.9", features = [ "rwh_05" ] }
